--- a/example.hosts.ini
+++ b/example.hosts.ini
@@ -1,5 +1,5 @@
 [control_plane]
-node1.local ip_host_octet=1
+node1.local ip_host_octet=61
 
 # Uncomment below when working on cluster through VPS tunnel host.
 #[control_plane:vars]
@@ -8,16 +8,16 @@ node1.local ip_host_octet=1
 #ansible_host='my-vps-host-or-ip'
 
 [nodes]
-node2.local ip_host_octet=2
-node3.local ip_host_octet=3
-node4.local ip_host_octet=4
+node2.local ip_host_octet=62
+node3.local ip_host_octet=63
+# node4.local ip_host_octet=4
 
 # Uncomment below when working on cluster through VPS tunnel host.
 #[nodes:vars]
 #ansible_ssh_common_args='-o ProxyCommand="ssh -p 2222 -W %h:%p -q pi@my-vps-host-or-ip"'
 
 [storage]
-node3.local
+node1.local
 
 [cluster:children]
 control_plane
