--- a/main.yml
+++ b/main.yml
@@ -8,11 +8,6 @@
     - name: reboot-pi
       ansible.builtin.reboot:
 
-    - name: restart nfs
-      ansible.builtin.service:
-        name: nfs-server
-        state: restarted
-
   vars_files:
     - config.yml
 
@@ -33,11 +28,16 @@
         dest: "~/k3s_install.sh"
         mode: a+x
 
-
 - name: Configure storage node.
   hosts: storage
   gather_facts: false
   become: true
+
+  handlers:
+    - name: restart nfs
+      ansible.builtin.service:
+        name: nfs-server
+        state: restarted
 
   vars_files:
     - config.yml
@@ -45,7 +45,6 @@
   tasks:
     - name: Set up storage.
       include_tasks: tasks/storage/{{ storage_type }}.yml
-
 
 - name: Configure the control plane.
   hosts: control_plane
@@ -72,6 +71,16 @@
       ansible.builtin.set_fact:
         node_token: "{{ node_token_output.stdout_lines[0] }}"
 
+    - name: Get stats of a EXTERNALLY-MANAGED file
+      ansible.builtin.stat:
+        path: /usr/lib/python3.11/EXTERNALLY-MANAGED
+      register: python_stat
+
+    - name: Move the EXTERNALLY-MANAGED to EXTERNALLY-MANAGED.old so can install python3
+      ansible.builtin.shell: >-
+        mv /usr/lib/python3.11/EXTERNALLY-MANAGED /usr/lib/python3.11/EXTERNALLY-MANAGED.old
+      when: python_stat.stat.exists
+
     - name: Ensure required dependencies are installed.
       ansible.builtin.package:
         name:
@@ -90,7 +99,6 @@
           - pyyaml
         state: present
       become: true
-
 
 - name: Configure the worker nodes.
   hosts: nodes
@@ -112,16 +120,15 @@
 
 - name: Set up Helm.
   import_playbook: tasks/kubernetes/helm.yml
-  tags: ['helm']
+  tags: ["helm"]
 
 - name: Set up NFS PVCs.
   import_playbook: tasks/kubernetes/nfs.yml
-  tags: ['nfs']
+  tags: ["nfs"]
 
 - name: Set up Prometheus.
   import_playbook: tasks/kubernetes/prometheus.yml
-  tags: ['prometheus']
-
-- name: Set up Drupal.
-  import_playbook: tasks/kubernetes/drupal.yml
-  tags: ['drupal']
+  tags: ["prometheus"]
+# - name: Set up Drupal.
+#   import_playbook: tasks/kubernetes/drupal.yml
+#   tags: ['drupal']
