Updated example.hosts.ini and tasks/networking/static-networking.yml files

--- a/example.hosts.ini
+++ b/example.hosts.ini
@@ -10,7 +10,7 @@ node1.local ip_host_octet=61
 [nodes]
 node2.local ip_host_octet=62
 node3.local ip_host_octet=63
-# node4.local ip_host_octet=4
+node4.local ip_host_octet=64
 
 # Uncomment below when working on cluster through VPS tunnel host.
 #[nodes:vars]
