--- a/example.hosts.ini
+++ b/example.hosts.ini
@@ -1,5 +1,20 @@
+# The 'ip_host_octet' is used only when configuring static networking using the
+# playbooks inside 'tasks/networking'.
 [control_plane]
 node1.local ip_host_octet=1
+
+[nodes]
+node2.local ip_host_octet=2
+node3.local ip_host_octet=3
+node4.local ip_host_octet=4
+
+# The node to be used for shared cluster storage.
+[storage]
+node3.local
+
+[cluster:children]
+control_plane
+nodes
 
 # Uncomment below when working on cluster through VPS tunnel host.
 #[control_plane:vars]
@@ -7,18 +22,5 @@ node1.local ip_host_octet=1
 #ansible_user='pi'
 #ansible_host='my-vps-host-or-ip'
 
-[nodes]
-node2.local ip_host_octet=2
-node3.local ip_host_octet=3
-node4.local ip_host_octet=4
-
-# Uncomment below when working on cluster through VPS tunnel host.
 #[nodes:vars]
 #ansible_ssh_common_args='-o ProxyCommand="ssh -p 2222 -W %h:%p -q pi@my-vps-host-or-ip"'
-
-[storage]
-node3.local
-
-[cluster:children]
-control_plane
-nodes
