Fix up README and make var for ansible_user easier to configure.

--- a/example.hosts.ini
+++ b/example.hosts.ini
@@ -16,6 +16,9 @@ node3.local
 control_plane
 nodes
 
+[cluster:vars]
+ansible_user='pi'
+
 # Uncomment below when working on cluster through VPS tunnel host.
 #[control_plane:vars]
 #ansible_port='2222'
