Issue #10: One last thing to make sure NFS mounts work on all nodes.

--- a/main.yml
+++ b/main.yml
@@ -40,6 +40,11 @@
         dest: "~/k3s_install.sh"
         mode: a+x
 
+    - name: Install required dependencies
+      ansible.builtin.apt:
+        name: nfs-common
+        state: present
+
 
 - name: Configure storage node.
   hosts: storage
