This sets the variables necessary to be able to access Grafana at port 30080. This implements code published by https://github.com/BicycleJohny in https://github.com/geerlingguy/pi-cluster/issues/15 .

--- a/tasks/kubernetes/prometheus.yml
+++ b/tasks/kubernetes/prometheus.yml
@@ -27,3 +27,7 @@
         values:
           alertmanager:
             enabled: false
+          grafana:
+            service:
+              type: NodePort
+              nodePort: 30080
