--- a/benchmarks/stress.yml
+++ b/benchmarks/stress.yml
@@ -19,3 +19,4 @@
     - name: Run stress-ng.
       ansible.builtin.command: >-
         stress-ng -c {{ ansible_processor_vcpus }} -t {{ stress_time }}
+      changed_when: false
