--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,11 @@
 name: CI
 'on':
   pull_request:
+    paths-ignore:
+      - '*.md'
   push:
+    paths-ignore:
+      - '*.md'
     branches:
       - master
 
